WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Composicao_Produtos_Permissao__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Combos_itens_requeridos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Composição de funçao diferente.
Um produto ser pai de itens combo e requeridos (ou um tipo, ou outro)</description>
        <label>Combos com itens requeridos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Composicao_cascata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Composição em cascata</description>
        <label>Composição em cascata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Itens_Pagina__c</fullName>
        <defaultValue>6</defaultValue>
        <description>Quantos itens aparecem em cada página do cross selling</description>
        <inlineHelpText>Valores possíveis: 1, 2, 3, 4, 6 e 12</inlineHelpText>
        <label>Cross Selling - Itens por Página</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Composição de Produtos - Permisão</label>
</CustomObject>